<resources>
    <string name="app_name">lizone</string>
    <string name="btn_register_title">点击注册</string>
    <string name="register">注册</string>
    <string name="hint_user_name">请输入常用手机号码</string>
    <string name="hint_verify_code"> 请输入短信验证码</string>
    <string name="hint_password">设置登录密码，6-16个字符之间</string>
    <string name="hint_pass_confirm">再次确认您设置的登陆密码</string>

    <string name="user_agreement_title">用户协议</string>
    <string name="user_agreement_confirm">我已阅读并同意</string>

    <string name="has_lizone_account">已有理财空间账号？</string>
    <string name="no_lizone_account">您还没有理财空间帐号?</string>
    <string name="btn_login_title">点击登陆</string>
    <string name="login">登陆</string>
    <string name="get_vevify_code">获取验证码</string>
    <string name="user_name_error">请输入正确手机号</string>
    <string name="ok_msg">确定</string>
    <string name="get_code_error">获取验证码出错</string>
    <string name="code_error">验证码错误</string>
    <string name="check_net">请检查您的网络是否正常</string>

    <string name="home_title">首页</string>
    <string name="market_title">市场</string>
    <string name="explore_title">发现</string>
    
    <string name="open_account">开通实盘</string>
    <string name="my_points">我的积分</string>
    <string name="my_account">我的账户</string>
    <string name="my_events">我的活动</string>
    <string name="my_gift">我的礼品</string>
    <string name="accumulate_point">积分</string>
    <string name="setting">设置</string>

    <string name="default_text_num">--.--</string>

</resources>
