<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_name"
        style="@style/text_register_item"
        android:layout_marginTop="@dimen/register_toolbar_margin_bottom"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/hint_user_name"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_password"
        style="@style/text_register_item">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height"
            android:textSize="@dimen/edit_text_size"
            android:inputType="text"
            android:password="true"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onXmlBtClick"
        android:text="@string/register"
        android:layout_marginLeft="@dimen/text_margin_left"
        android:layout_marginRight="@dimen/text_margin_left"
        android:minHeight="50dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no_lizone_account"
            android:textColor="@color/white_two"
            />
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onXmlBtClick"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_register_title"
            android:textColor="@color/blue_two"
            />
    </LinearLayout>
</LinearLayout>

