<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/text_margin_left"
    android:layout_marginLeft="@dimen/text_margin_left"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/nav_lv_open_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_menu_item_hight"
        android:gravity="center_vertical"
        android:onClick="onXmlBtClick"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/nav_ic_height"
            android:layout_height="@dimen/nav_ic_height"
            android:src="@drawable/ic_open_account"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/nav_menu_margin_left"
            android:text="@string/open_account"
            android:textColor="@color/white_two"
            android:textSize="@dimen/nav_menu_item_text_size"
            android:drawableRight="@drawable/go"
            android:gravity="left|center_vertical" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <RelativeLayout
        android:id="@+id/nav_lv_point"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_menu_item_hight"
        android:onClick="onXmlBtClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nav_menu_point_ic"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/nav_ic_height"
            android:layout_height="@dimen/nav_ic_height"
            android:src="@drawable/ic_point"
            />
        <TextView
            android:id="@+id/nav_menu_point_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/nav_menu_margin_left"
            android:text="@string/my_points"
            android:textColor="@color/white_two"
            android:textSize="@dimen/nav_menu_item_text_size"
            android:layout_toRightOf="@+id/nav_menu_point_ic"
            android:gravity="left|center_vertical" />
        <TextView
            android:id="@+id/nav_menu_tv_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/nav_menu_item_text_size"
            android:text="0"
            android:layout_marginLeft="@dimen/nav_menu_margin_left"
            android:layout_toLeftOf="@+id/nav_menu_point_go"
            android:gravity="right|center_vertical"
            android:textColor="@color/orange"
            />
        <TextView
            android:id="@+id/nav_menu_point_go"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/nav_menu_margin_left"
            android:layout_alignParentRight="true"
            android:text="@string/accumulate_point"
            android:textColor="@color/white_two"
            android:textSize="@dimen/nav_menu_item_text_size"
            android:drawableRight="@drawable/go"
            android:gravity="right|center_vertical" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:id="@+id/nav_lv_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_menu_item_hight"
        android:onClick="onXmlBtClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/nav_ic_height"
            android:layout_height="@dimen/nav_ic_height"
            android:src="@drawable/ic_account"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/nav_menu_margin_left"
            android:text="@string/my_account"
            android:textColor="@color/white_two"
            android:textSize="@dimen/nav_menu_item_text_size"
            android:drawableRight="@drawable/go"
            android:gravity="left|center_vertical" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:id="@+id/nav_lv_event"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_menu_item_hight"
        android:onClick="onXmlBtClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/nav_ic_height"
            android:layout_height="@dimen/nav_ic_height"
            android:src="@drawable/ic_event"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/nav_menu_margin_left"
            android:text="@string/my_events"
            android:textColor="@color/white_two"
            android:textSize="@dimen/nav_menu_item_text_size"
            android:drawableRight="@drawable/go"
            android:gravity="left|center_vertical" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:id="@+id/nav_lv_gift"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_menu_item_hight"
        android:onClick="onXmlBtClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/nav_ic_height"
            android:layout_height="@dimen/nav_ic_height"
            android:src="@drawable/ic_gift"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/nav_menu_margin_left"
            android:text="@string/my_gift"
            android:textColor="@color/white_two"
            android:textSize="@dimen/nav_menu_item_text_size"
            android:drawableRight="@drawable/go"
            android:gravity="left|center_vertical" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
</LinearLayout>
